solved bug: :hover shift

--- a/style.css
+++ b/style.css
@@ -27,16 +27,19 @@
     height: 80px;
 }
 nav{
+    width: 50%;
     height: 100%;
 }
 nav ul{
     height: 100%;
-    gap: 16px;
+    /* gap: 16px; can active when <a> always bold*/
     list-style: none;
     display: flex;
+    justify-content: flex-end;
     align-items: flex-end;
 }
 nav ul li{
+    width: 20%;/*solves shift problem by :hover bold*/
     height: 25px;/*distance to box-shadow for underline*/
     text-align: center;
 }
